<resources>
    <string name="app_name">ConcentrationGame</string>
    <string name="start_game">START GAME</string>
    <string name="credits">CREDITS</string>
    <string name="highscores">HIGHSCORES</string>
    <string name="team_storm">Team Storm</string>
    <string name="concentration">Concentration</string>
    <string name="high_scores">High Scores</string>
    <string name="settings">Settings</string>
    <string name="high_score_1">High Score #1</string>
    <string name="high_score_2">High Score #2</string>
    <string name="high_score_3">High Score #3</string>
    <string name="save_test_scores">Save Test Scores</string>
    <string name="load_test_scores">Load Test Scores</string>
    <string name="load_scores">Load Scores</string>
    <string name="enter_amount_of_tiles_4_20">enter amount of tiles (4-20)</string>
    <string name="creditsLabel">Credits</string>
    <string name="creditName2">Kristine Trevino Kinoshita (014679639)</string>
    <string name="creditName3">Owen Lovett (014846715)</string>
    <string name="creditName4">Timmy Lin (015073799)</string>
    <string name="creditName1">Scott Lee (013762138)</string>
    <string-array name="dropMenuOptions">
        <item>4 tiles</item>
        <item>6 tiles</item>
        <item>8 tiles</item>
        <item>10 tiles</item>
        <item>12 tiles</item>
        <item>14 tiles</item>
        <item>16 tiles</item>
        <item>18 tiles</item>
        <item> 20 tiles</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="try_again">Try again</string>
    <string name="end_game">End game</string>
    <string name="new_game">New game</string>
    <string name="unmute_audio">Unmute Audio</string>
    <string name="mute_audio">Mute Audio</string>
    <string name="tile_amount">Tile Amount:</string>
    <string name="text">text</string>
    <string name="reset_scores">Reset Scores</string>
</resources>